--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   # 屏幕适配 https://pub.flutter-io.cn/packages/flutter_screenutil
   flutter_screenutil: ^5.0.0+2
   flutter_jpush: ^0.0.4
+  scrollable_positioned_list: ^0.1.10
 #  sy_flutter_wechat: ^0.2.2
 #  fluwx: ^3.4.2
   # 第三方登录 google firebase等
@@ -106,6 +107,7 @@ dependencies:
   flutter_staggered_grid_view: "^0.3.2" #瀑布流错开效果
   top_snackbar_flutter: ^1.0.0
   flutter_datetime_picker: ^1.5.1
+  scrollable_list_tabview: ^0.1.6
 #  achievement_view: ^0.2.1
 
 dev_dependencies:
